# pytest-plugins

./: .env  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/pytest_plugins/: admin.py  asgi.py  factories.py  manage.py  models.py  settings.py  urls.py  wsgi.py
src/pytest_plugins/migrations/: 0001_initial.py
tests/: conftest.py  test_1_pytest_env.py  test_2_pytest_mock.py  test_3_pytest_django.py  test_4_pytest_factoryboy.py  test_5_pytest_playwright.py  test_6_pytest_repeat.py
