[project]
name = "pytest-plugins"
description = "5 pytest plugins for Django development"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Martijn Jacobs", email = "maerteijn@gmail.com"}]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

dependencies = [
  "factory-boy ~= 3.3",
  "Django ~= 5.1",
  "django-environ ~= 0.11"
]

[project.urls]
"repository" = "https://github.com/maerteijn/pytest-plugins"

[project.scripts]
"manage.py" =  "pytest_plugins.manage:main"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pytest_plugins = ["static/**"]

[project.optional-dependencies]
dev = [
    "ruff ~= 0.6",
    "mypy ~= 1.11",
    "pip-tools ~= 7.3",
    "playwright ~= 1.46",
    "pytest ~= 8.3",
    "pytest-env ~= 0.8",
    "pytest-mock ~= 3.14",
    "pytest-django ~= 4.9",
    "pytest-factoryboy ~= 2.6",
    "pytest-playwright ~= 0.5.2",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "B", "I", "C901"]
ignore = ["E203","E231","E266","E501","F405"]

[tool.mypy]
exclude = ["tests/*","src/pytest_plugins/migrations/*", "venv/*"]
# see https://careers.wolt.com/en/blog/tech/professional-grade-mypy-configuration
disallow_untyped_defs = false
disallow_any_unimported = false
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
warn_unreachable = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pytest_plugins.settings"
testpaths = "tests/"
addopts = "--reuse-db --ignore=tests/test_5_pytest_playwright.py"
env = [
    "CURRENT_USER = {USER}",
]
